# Golf_project

./: Cargo.toml  README.md  ReadMe.txt
inputs/: input0.txt  input1.json  input1.txt  input2.txt  inputs.json
output/: output0.txt
src/: algorithms.rs  graphics.rs  input.rs  main.rs  output.rs  types.rs
src/generator/: main.rs
src/main/: algorithms.rs  graphics.rs  input.rs  main.rs  output.rs
tests/: benchmarks.txt
