[package]
name = "Golf_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Generator"
path = "src/generator/main.rs"

[[bin]]
name = "Golf_project"
path = "src/main/main.rs"

[dependencies]
sdl2 = "0.35.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"